syntax = "proto3";

package user_bff_service;

import "types.proto";

enum LoginErrorCode {
  LOGIN_ERROR_NONE = 0;
  LOGIN_ERROR_INVALID_CREDENTIALS = 1;
  LOGIN_ERROR_DISABLED_ACCOUNT = 2;
  LOGIN_ERROR_BAD_REQUEST = 100;
  LOGIN_ERROR_INTERNAL_ERROR = 101;
}

enum RegisterErrorCode {
  REGISTER_ERROR_NONE = 0;
  REGISTER_ERROR_USERNAME_EXISTS = 1;
  REGISTER_ERROR_BAD_REQUEST = 100;
  REGISTER_ERROR_INTERNAL_ERROR = 101;
}

enum LogoutErrorCode {
  LOGOUT_ERROR_NONE = 0;
  LOGOUT_ERROR_BAD_REQUEST = 100;
  LOGOUT_ERROR_INTERNAL_ERROR = 101;
}

message UserCredentials {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  UserCredentials credentials = 1;
}

message LoginResponse {
  common.User user = 1;
  string session_token = 2;
  LoginErrorCode error_code = 3;
  string error_message = 4;
}

message RegisterRequest {
  UserCredentials credentials = 1;
  string nickname = 2;
}

message RegisterResponse {
  RegisterErrorCode error_code = 1;
  string error_message = 2;
}

message LogoutRequest {
  string session_token = 1;
}

message LogoutResponse {
  LogoutErrorCode error_code = 1;
  string error_message = 2;
}

message GetUserProfileRequest {
  string session_token = 1;
}

message GetUserProfileResponse {
  common.User user = 1;
  string error_message = 2;
}

service UserBFFService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
}
